--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@crystallize/node-service-api-request-handlers": "^4.2.0",
         "@crystallize/reactjs-components": "^2.1.0",
         "@dintero/checkout-web-sdk": "^0.8.12",
+        "@headlessui/react": "^2.2.2",
+        "@heroicons/react": "^2.2.0",
         "@react-email/components": "^0.0.25",
         "@react-email/render": "^1.0.1",
         "@sendgrid/mail": "^8.1.3",
@@ -30,8 +32,8 @@
         "razorpay": "^2.9.4",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "schema-dts": "^1.1.5",
-        "react-player": "^2.16.0"
+        "react-player": "^2.16.0",
+        "schema-dts": "^1.1.5"
     },
     "devDependencies": {
         "@graphql-codegen/add": "^5.0.3",
