--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@heroicons/react": "^2.2.0",
         "@react-email/components": "^0.0.25",
         "@react-email/render": "^1.0.1",
+        "@react-pdf/renderer": "^4.3.0",
         "@sendgrid/mail": "^8.1.3",
         "@stripe/react-stripe-js": "^3.3.0",
         "@stripe/stripe-js": "^5.8.0",
