--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ STRIPE_WEBHOOK_SECRET=xXx
 #Mailer
 MAILER_DSN=xXx
 
-NEXT_PUBLIC_CANONICAL_URL=https://example.com
+CANONICAL_URL=https://example.com
