--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_CRYSTALLIZE_TENANT_IDENTIFIER=xXx
 CRYSTALLIZE_TENANT_IDENTIFIER=xXx
 CRYSTALLIZE_TENANT_ID=xXx
 CRYSTALLIZE_ACCESS_TOKEN_ID=xXx
