feat: Add basic authentication support with middleware integration
- This commit introduces basic authentication functionality.
- Environment variables were added to configure authentication credentials, and a middleware was implemented to enforce it.
- Unauthorized requests are now redirected to a new API route, providing a secure access layer.

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,17 @@ CRYSTALLIZE_TENANT_ID=xXx
 CRYSTALLIZE_ACCESS_TOKEN_ID=xXx
 CRYSTALLIZE_ACCESS_TOKEN_SECRET=xXx
 
-#Stripe
+# Stripe
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=xXx
 STRIPE_SECRET_KEY=xXx
 STRIPE_WEBHOOK_SECRET=xXx
 
-#Mailer
+# Mailer
 MAILER_DSN=xXx
 
 CANONICAL_URL=https://example.com
+
+# Basic Auth
+BASIC_AUTH=
+BASIC_USER=demo
+BASIC_PASSWORD=demo
