feat: add qliro integration (#61)

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,18 @@ CRYSTALLIZE_TENANT_ID=xXx
 CRYSTALLIZE_ACCESS_TOKEN_ID=xXx
 CRYSTALLIZE_ACCESS_TOKEN_SECRET=xXx
 
-#Stripe
+# Stripe
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=xXx
 STRIPE_SECRET_KEY=xXx
 STRIPE_WEBHOOK_SECRET=xXx
 
-#Mailer
+# Qliro
+QLIRO_BASE_URL="https://pago.qit.nu"
+QLIRO_API_KEY=xXx
+QLIRO_API_SECRET=xXx
+
+# Mailer
 MAILER_DSN=xXx
 
+# Misc
 CANONICAL_URL=https://example.com
