--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-    "name": "nextjs-furnitut",
+    "name": "norko-crystallize-frontend",
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev",
+        "dev-safe": "next dev --port 3000 --hostname localhost",
+        "dev-turbo": "next dev --turbopack",
         "build": "next build",
+        "build-debug": "next build --debug",
         "start": "next start",
         "lint": "next lint",
+        "clean": "rimraf .next",
+        "reset": "rimraf .next && rimraf node_modules/.cache",
         "codegen": "graphql-codegen --require dotenv/config --config codegen.ts",
         "prettier": "prettier --write ."
     },
@@ -24,6 +29,8 @@
         "@sendgrid/mail": "^8.1.3",
         "@stripe/react-stripe-js": "^3.3.0",
         "@stripe/stripe-js": "^5.8.0",
+        "@tailwindcss/oxide": "^4.1.11",
+        "autoprefixer": "^10.4.21",
         "classnames": "^2.5.1",
         "embla-carousel-react": "8.5.2",
         "graphql": "^16.9.0",
@@ -34,14 +41,15 @@
         "react": "19.0.0",
         "react-dom": "19.0.0",
         "react-player": "^2.16.0",
-        "schema-dts": "^1.1.5"
+        "schema-dts": "^1.1.5",
+        "sharp": "^0.34.2",
+        "tailwindcss": "^3.4.0"
     },
     "devDependencies": {
         "@graphql-codegen/add": "^5.0.3",
         "@graphql-codegen/cli": "^5.0.2",
         "@graphql-codegen/client-preset": "^4.3.3",
         "@graphql-typed-document-node/core": "^3.2.0",
-        "@tailwindcss/postcss": "^4.0.9",
         "@types/node": "^20",
         "@types/nodemailer": "^6.4.16",
         "@types/react": "19.0.7",
@@ -51,7 +59,6 @@
         "eslint-config-prettier": "^10.0.2",
         "postcss": "^8",
         "prettier": "^3.5.3",
-        "tailwindcss": "^4.0.9",
         "typescript": "^5.6.2"
     },
     "overrides": {
