--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
         "incremental": true,
         "plugins": [{ "name": "next" }],
         "paths": { "@/*": ["./*"] },
-        "target": "ES2017"
+        "target": "ES2017",
+        "types": ["react", "react-dom", "node"],
+        "jsxImportSource": "react"
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "core/crystallize-client.server"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "core/crystallize-client.server", "types/**/*.d.ts"],
     "exclude": ["node_modules"]
 }
