--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
         "autoprefixer": "^10.4.21",
         "classnames": "^2.5.1",
         "embla-carousel-react": "8.5.2",
+        "express-rate-limit": "^7.5.1",
         "graphql": "^16.9.0",
         "jose": "^5.9.6",
+        "jsonwebtoken": "^9.0.2",
         "next": "15.2.2-canary.0",
         "nodemailer": "^6.9.15",
         "razorpay": "^2.9.4",
